--- a/7월 4주차/723 화요일 메모.md
+++ b/7월 4주차/723 화요일 메모.md
@@ -137,6 +137,8 @@ o 버튼을 누르면 한칸 띄어서 insert가 된다.
 
 ```bash
 alias
+alias venv="source ~/python-virtualenv/3.7.4/Scripts/activate"
+# 붙여줘야한다.
 # 이 명령어는 줄여주는 명령어.
 # an = "arabian night"
 # an을 치면 뒤에가 나온다.
