--- a/8월 3주차/814 수요일 메모.md
+++ b/8월 3주차/814 수요일 메모.md
@@ -44,6 +44,10 @@ Python 3.7.4
 # python -m venv <가상환경 설치경로>
 $ python -m venv venv
 
+# 이거를 해줘야 한다.
+Ctrl + Shift + p` => `python select interpreter`=> 방금 생성한 가상환경을 선택 (`.\venv\Scripts\python.exe`) 
+- .vscode/settings.json 파일이 생성되며 터미널에서 자동으로 가상환경 적용된다면 OK
+
 # 가상환경 적용
 $ source venv/Scripts/activate
 
